--- a/telco_churn_project_v0.ipynb
+++ b/telco_churn_project_v0.ipynb
@@ -336,135 +336,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>churn_encoded</th>\n",
-       "      <th>variable</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>online_security_Yes</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
-       "      <td>online_security_Yes</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0</td>\n",
-       "      <td>online_security_Yes</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>0</td>\n",
-       "      <td>online_security_Yes</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>0</td>\n",
-       "      <td>online_security_Yes</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25332</th>\n",
-       "      <td>0</td>\n",
-       "      <td>streaming_movies_Yes</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25333</th>\n",
-       "      <td>0</td>\n",
-       "      <td>streaming_movies_Yes</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25335</th>\n",
-       "      <td>0</td>\n",
-       "      <td>streaming_movies_Yes</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25338</th>\n",
-       "      <td>0</td>\n",
-       "      <td>streaming_movies_Yes</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25349</th>\n",
-       "      <td>0</td>\n",
-       "      <td>streaming_movies_Yes</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8745 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       churn_encoded              variable  value\n",
-       "3                  0   online_security_Yes      1\n",
-       "5                  0   online_security_Yes      1\n",
-       "8                  0   online_security_Yes      1\n",
-       "10                 0   online_security_Yes      1\n",
-       "13                 0   online_security_Yes      1\n",
-       "...              ...                   ...    ...\n",
-       "25332              0  streaming_movies_Yes      1\n",
-       "25333              0  streaming_movies_Yes      1\n",
-       "25335              0  streaming_movies_Yes      1\n",
-       "25338              0  streaming_movies_Yes      1\n",
-       "25349              0  streaming_movies_Yes      1\n",
-       "\n",
-       "[8745 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "melt"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -627,7 +498,7 @@
     }
    ],
    "source": [
-    "##\n",
+    "## creates a melt based on services provided and produced a chart based on the mean of churn for each category in services\n",
     "\n",
     "service_list =['online_security_Yes', 'online_backup_Yes',\n",
     "       'device_protection_Yes', 'tech_support_Yes', 'streaming_tv_Yes',\n",
@@ -681,6 +552,9 @@
     }
    ],
    "source": [
+    "## creates two subplots that are of the churn ratio over time. the first is all of the time period provided in the data\n",
+    "## the second is \"zoomed in\" on the first 2 years (25 periods)\n",
+    "\n",
     "fig, (ax1, ax2) = plt.subplots(ncols=2, sharey=True)\n",
     "\n",
     "sns.lineplot(x=train_df[\"tenure\"], y=train_df[prediction_col], data=train_df, ax=ax1)\n",
@@ -741,7 +615,7 @@
     }
    ],
    "source": [
-    "\n",
+    "##find the baseline of churn based on mode\n",
     "baseline_predict = train_df[prediction_col].mode()[0]\n",
     "(train_df[prediction_col] == baseline_predict).mean()\n",
     "\n",
@@ -787,6 +661,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## in an attempt to reduce features i go through and remove categorical features that have low independance of Churn\n",
+    "## to reduce further i remove the bottom 25% through evaluation of Chi^2 values\n",
+    "\n",
     "cat_df = pd.DataFrame({\"col_name\":[],\"p_val\":[],\"chi2_val\":[]})\n",
     "for iter1 in cat_vars:\n",
     "    #if iter1 != \"churn\":\n",
@@ -831,7 +708,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "##setting the data sets based on features i want to include\n",
     "X_train = train_df[train_df.columns.intersection([ele for ele in cat_high_dep_df.col_name])]\n",
     "y_train = train_df[prediction_col]\n",
     "\n",
@@ -901,6 +778,9 @@
     }
    ],
    "source": [
+    "## doing a basic decison tree classification, the number for depth was determined in previous class work i've done\n",
+    "## fits the model, plots it, predicts off the training, and produces results (classification and confusion matrix)\n",
+    "\n",
     "clf = DecisionTreeClassifier(max_depth= 4, random_state= 123, criterion=\"gini\")\n",
     "clf = clf.fit(X_train,y_train)\n",
     "\n",
@@ -1012,7 +892,11 @@
     }
    ],
    "source": [
-    " rf = RandomForestClassifier(bootstrap=True,\n",
+    "## random forest classifier, i played with the values until i settled on these\n",
+    "## fits the data, predicts on the training, and runs classification and confusion reports\n",
+    "## also plots the most weight of the top 10 features with a confusion matrix display below it\n",
+    "\n",
+    "rf = RandomForestClassifier(bootstrap=True,\n",
     "                         class_weight=None,\n",
     "                         criterion=\"gini\",\n",
     "                         min_samples_leaf=5,\n",
@@ -1107,6 +991,9 @@
     }
    ],
    "source": [
+    "## logistic regression classifier, played with values until i found some i liked\n",
+    "## produces confusion and classification reports\n",
+    "\n",
     "logreg = LogisticRegression(C=.1)#, class_weight={0:1, 1:99}, random_state=123, intercept_scaling=1, solver='lbfgs', max_iter=1000000000)\n",
     "logreg.fit(X_train,y_train)\n",
     "\n",
@@ -1175,6 +1062,9 @@
     }
    ],
    "source": [
+    "## running the test set using my randomforest classifier\n",
+    "## produces confusion, classifification report as well as probabilities\n",
+    "\n",
     "y_pred_rf_test = rf.predict(X_test)\n",
     "y_proba_rf_test = rf.predict_proba(X_test)\n",
     "print(confusion_matrix(y_test, y_pred_rf_test), \"confusion matrix\")\n",
@@ -1188,28 +1078,6 @@
    "metadata": {},
    "source": [
     "The recall and precision are less than i would like to see"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'type' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/geary.shenck/codeup-data-science/classification-exercises/telco_churn_project_v0.ipynb Cell 37\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/geary.shenck/codeup-data-science/classification-exercises/telco_churn_project_v0.ipynb#Y216sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m temp \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/geary.shenck/codeup-data-science/classification-exercises/telco_churn_project_v0.ipynb#Y216sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m temp[\u001b[39m\"\u001b[39m\u001b[39m1proba\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m y_proba_rf_test\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'type' object does not support item assignment"
-     ]
-    }
-   ],
-   "source": [
-    "temp = pd.DataFrame\n",
-    "temp[\"1proba\"] = y_proba_rf_test"
    ]
   },
   {
@@ -1362,7 +1230,9 @@
     }
    ],
    "source": [
-    "#X_test = X_test.rename_axis(\"customer_id\").reset_index()\n",
+    "#i keep everything in X_test to retain the index for match with customer_id and churn value\n",
+    "# removes the data that was not in it prior through tranposing and using tail, and pushes that out a csv\n",
+    "\n",
     "X_test[\"0_proba\"] = pd.DataFrame(y_proba_rf_test,columns=[\"0_proba\",\"1_proba\"])[\"0_proba\"].values\n",
     "X_test[\"1_proba\"] = pd.DataFrame(y_proba_rf_test,columns=[\"0_proba\",\"1_proba\"])[\"1_proba\"].values\n",
     "X_test[\"prediction\"] = y_pred_rf_test\n",
